@@ -66,7 +66,7 @@
         "name": "Сковорода Никита Андреевич",
         "email": "chalkerx@gmail.com"
     }],
-    "version": "2.0.0-22",
+    "version": "2.0.0-23",
     "homepage": "http://www.totaljs.com",
     "bugs": {
         "url": "https://github.com/totaljs/framework/issues",
