@@ -39,6 +39,7 @@
 - updated: `Date.format()` supports day names `ddd` (short) and `dddd` (full)
 - updated: `String.removeDiacritics()` supports multiple languages (by @Harry-Slot)
 - updated: (IMPORTANT) `U.getExtension(filename)` --> returns extension without `.` dot
+- updated: (IMPORTANT) `F.resize(url, action(image), [flags])` new resize routing
 
 - fixed: `FrameworkImage.save()` problem with streams
 - fixed: `CLEANUP(stream)` method
